<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">RightScale</string>

<!--  Services -->
	<string name="feed">Feed</string>

<!--  Settings -->
    <string name="email">Email</string>    
    <string name="password">Password</string>
	<string name="system">System</string>
	
<!--  Menu strings, activity labels, etc ("main" menu) -->
	<string name="login">Login</string>
	<string name="accounts">Accounts</string>
	<string name="accounts_shortcut">a</string>
	<string name="deployments">Deployments</string>
	<string name="deployments_shortcut">d</string>
	<string name="settings">Settings</string>
	<string name="settings_shortcut">s</string>
	<string name="sign_up">Sign Up</string>
		
<!--  IndexAccounts -->
	<string name="connect">Connect</string>
	<string name="index_accounts_prompt">Choose an account to operate on:</string>
<!--  IndexDeployments -->
	<string name="rightscale_deployments">RightScale Deployments</string>
	<string name="no_deployments"></string>

	<string name="no_deployment_servers"></string>

	<string name="show_server_info">Server Info</string>
	<string name="show_server_info_name">Name</string>
	<string name="show_server_info_state">State</string>
	<string name="show_server_info_address">IP Address</string>
	<string name="show_server_info_cloud">Cloud</string>
	<string name="show_server_info_datacenter">Datacenter</string>
	<string name="show_server_info_pricing">Pricing</string>

<!--  Menu strings (Show Server menu) -->
	<string name="ssh_server">SSH</string>
	<string name="launch_server">Launch</string>
	<string name="terminate_server">Terminate</string>
	<string name="reboot_server">Reboot</string>

<!--  App-wide dialogs and messages -->
	<string name="initial_login_greeting">Welcome to RightScale! Enter your login information in Settings, or Sign Up for a new account.</string>
	<string name="authentication_error_title">RightScale: Not Authorized</string>
	<string name="authentication_error_message">Your request was rejected.\nIs your information correct?\nCheck your login information in Settings.</string>
	<string name="generic_error_title">RightScale: Error</string>
	<string name="generic_error_message">Oops! An error has occurred.\nSorry about that.\n\nHit your phone\'s Back button to try again, or choose:</string>

<!--  Notifications, toasts and other popup-y things -->
	<string name="notify_execution_requested">Script execution requested.</string>

<!-- SSH integration messages -->
	<string name="ssh_failure_title">Missing Required Software</string>
	<string name="ssh_failure">You must install ConnectBot SSH client before you can create SSH sessions.</string>
	<string name="ok">OK</string>
</resources>
