<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="vertical">
	<TwoLineListItem
	        xmlns:android="http://schemas.android.com/apk/res/android"
	        android:paddingTop="2dip"
	        android:paddingBottom="2dip"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	
	        <TextView
	                android:id="@+id/show_server_info_name_label"
	                android:textAppearance="?android:attr/textAppearanceLarge"
	                android:text="@string/show_server_info_name"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content" />
	
	        <TextView
	                android:id="@+id/show_server_info_name"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_below="@id/show_server_info_name_label" />
	
	</TwoLineListItem>

	<TwoLineListItem
	        xmlns:android="http://schemas.android.com/apk/res/android"
	        android:paddingTop="2dip"
	        android:paddingBottom="2dip"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	
	        <TextView
	                android:id="@+id/show_server_info_state_label"
	                android:textAppearance="?android:attr/textAppearanceLarge"
	                android:text="@string/show_server_info_state"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content" />
	
	        <TextView
	                android:id="@+id/show_server_info_state"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_below="@id/show_server_info_state_label" />
	
	</TwoLineListItem>

	<TwoLineListItem
	        xmlns:android="http://schemas.android.com/apk/res/android"
	        android:paddingTop="2dip"
	        android:paddingBottom="2dip"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	
	        <TextView
	                android:id="@+id/show_server_info_address_label"
	                android:textAppearance="?android:attr/textAppearanceLarge"
	                android:text="@string/show_server_info_address"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content" />
	
	        <TextView
	                android:id="@+id/show_server_info_address"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_below="@id/show_server_info_address_label" />
	
	</TwoLineListItem>

	<TwoLineListItem
	        xmlns:android="http://schemas.android.com/apk/res/android"
	        android:paddingTop="2dip"
	        android:paddingBottom="2dip"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	
	        <TextView
	                android:id="@+id/show_server_info_cloud_label"
	                android:textAppearance="?android:attr/textAppearanceLarge"
	                android:text="@string/show_server_info_cloud"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content" />
	
	        <TextView
	                android:id="@+id/show_server_info_cloud"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_below="@id/show_server_info_cloud_label" />
	
	</TwoLineListItem>

	<TwoLineListItem
	        xmlns:android="http://schemas.android.com/apk/res/android"
	        android:paddingTop="2dip"
	        android:paddingBottom="2dip"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	
	        <TextView
	                android:id="@+id/show_server_info_datacenter_label"
	                android:textAppearance="?android:attr/textAppearanceLarge"
	                android:text="@string/show_server_info_datacenter"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content" />
	
	        <TextView
	                android:id="@+id/show_server_info_datacenter"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_below="@id/show_server_info_datacenter_label" />
	
	</TwoLineListItem>

	<TwoLineListItem
	        xmlns:android="http://schemas.android.com/apk/res/android"
	        android:paddingTop="2dip"
	        android:paddingBottom="2dip"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	
	        <TextView
	                android:id="@+id/show_server_info_pricing_label"
	                android:textAppearance="?android:attr/textAppearanceLarge"
	                android:text="@string/show_server_info_pricing"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content" />
	
	        <TextView
	                android:id="@+id/show_server_info_pricing"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_below="@id/show_server_info_pricing_label" />
	
	</TwoLineListItem>
	
</LinearLayout>
 